# gRPC-UDS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.sender  Makefile  README.md  SCHEDULE.md  TRAINING_SCHEDULE.md  buf.yaml  client.py  compose.yaml  config.py  proto_compile.sh  pyproject.toml  server.py
.github/workflows/: ci.yml
app/utils/: logger.py
proto/: schema.proto
