[project]
name = "grpc-uds"
version = "0.1.0"
description = "This project is a containerized client-server architecture that streams raw 1080p RGB image matrices at 30fps between isolated Python processes. By routing gRPC communication over a Unix Domain Socket (UDS) via a shared Docker volume, it bypasses the TCP/IP stack to achieve highly optimized, low-latency inter-process communication."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorlog>=6.10.1",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "numpy>=2.4.3",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "mypy-protobuf>=5.0.0",
    "ruff>=0.15.6",
    "types-grpcio>=1.0.0.20251009",
    "types-protobuf>=7.34.1.20260403",
]

[tool.ruff.lint]
# Add the rule prefixes want Ruff to enforce
select = [
    "E",   # Standard errors
    "F",   # Standard flakes
    "I",   # isort (automatically sorts your imports)
    "UP",  # pyupgrade (forces modern Python syntax)
    "NPY", # THE NUMPY RULES
]
ignore = []
exclude = [
    "generated/"
]

[tool.mypy]
strict = true
exclude = [
    "^generated/"
]
